--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,6 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.cs_3013.android.animations.MainActivity">
     <item
+        android:id="@+id/color_picker"
+        android:orderInCategory="65"
+        android:title="@string/color_picker"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/action_settings"
         android:orderInCategory="49"
         android:title="@string/action_settings"
